css terminado página inicial

--- a/front/notificacoes.html
+++ b/front/notificacoes.html
@@ -15,7 +15,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><a href="inicial.html"><i class="fa fa-times" aria-hidden="true"></i></a></button>
             </div>
             <div class="modal-body">
-              <p>Modal body text goes here.</p>
+              <p>Sem Notificações</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><a href="inicial.html">Fechar</a></button>
