--- a/public/inicial.html
+++ b/public/inicial.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./content/css/inicial.css">
-    <script src="./script/javascript/inicial.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./stylesheets/inicial.css">
     <title>ProjMeteo</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
                 <div id="temp">
                     <p class="clima">Agora</p>
                     <div id="direita">
-                        <img src="./content/image/iconeNublado.png" alt=" dia Nublado" id="tipo">
+                        <img src="./images/iconeNublado.png" alt=" dia Nublado" id="tipo">
                         <p id="valorTempo">
                             32 <sup>ºc</sup>
                         </p>
@@ -66,7 +66,7 @@
                 <div id="dia">
                     <h4>Próximas Horas</h4>
                     <p class="hora">15:00</p>
-                    <img src="./content/image/iconeNublado.png" alt="Dia Nublado" id="primeiraDia">
+                    <img src="./images/iconeNublado.png" alt="Dia Nublado" id="primeiraDia">
                     <p class="temperatura">32 <sup>ºc</sup></p>
                     <p>Nublado</p>
                 </div>
@@ -75,14 +75,14 @@
                 <div id="semana">
                     <h4>Próximos Dias</h4>
                     <p class="diaSemana">Segunda-feira</p>
-                    <img src="./content/image/iconeNublado.png" alt="Dia Nublado" id="segundaSemana">
+                    <img src="./images/iconeNublado.png" alt="Dia Nublado" id="segundaSemana">
                     <p class="temperatura">32 <sup>ºc</sup></p>
                     <p>Nublado</p>
                 </div>
             </div>
-            
-
         </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="./javascripts/inicial.js"></script>
 </body>
 </html>
